# controller-software

./: .gitignore  README.md  axi_master_test.vcd  controller-software.code-workspace  controller_config.json  controller_test.vcd  convergentRound.vcd  dma.vcd  drive_serial_port.vcd  em_serial_port.vcd  fanuc_encoders_test.vcd  global_timers_test.vcd  i2c.vcd  i2c_test.vcd  my_module.v  results.csv  scope.json  serial_controller.vcd  setup_subst.bat  shift_dma_test.vcd  test.json  test_block.json  uart.vcd
controller-firmware/Vivado/: .gitignore  controller_firmware.tcl  controller_firmware_top.sv  convert.bif  create_project.tcl  export bit.bin.tcl  save_project.tcl
controller-firmware/Vivado/autogen_sources/: axi_master.v  controller.v  test.v
controller-firmware/Vivado/constraints/: system.xdc
controller-firmware/Vivado/controller_firmware/: controller_firmware_top.xsa  controller_firmware_top_behav.wcfg
controller-firmware/python/: .gitignore  biquad test.py  requirements.txt
controller-firmware/python/amaranth_sources/: biquad.py  (+2 more)
controller-software/core/: .gitignore  CMakeLists.txt  CMakePresets.json  controller-software-core.code-workspace  controller.h  main  main.cpp  readme.md
controller-software/core/api_drivers/: api_objects.h  controller_api.h  shared_mem.h  test_api  test_api.cpp  test_controller.cpp  web_api.h
controller-software/core/api_drivers/calls/: base_call.h  machine_state.h  print_uint32.h
controller-software/core/cmake/: zynq_debug.cmake
controller-software/core/controller/api_drivers/: controller_api.h  shared_mem.h  test_api.cpp  test_controller  test_controller.cpp  web_api.h
controller-software/core/controller/api_drivers/calls/: machine_state.h
controller-software/core/controller/api_drivers/calls/inc/: base_call.h  machine_state.h  print_uint32.h
controller-software/core/controller/api_drivers/calls/src/: base_call.cpp
controller-software/core/controller/api_drivers/inc/: api_objects.h  controller_api.h  shared_mem.h
controller-software/core/controller/api_drivers/src/: api_objects.cpp  controller_api.cpp  shared_mem.cpp
controller-software/core/controller/fpga_module_drivers/inc/: em_serial_controller.h  em_serial_controller.h.old  fanuc_encoders.h  fanuc_encoders.h.old  global_timers.h  global_timers.h.old  serial_interface_card.h
controller-software/core/controller/fpga_module_drivers/src/: em_serial_controller.cpp  em_serial_controller.cpp.old  fanuc_encoders.cpp  fanuc_encoders.cpp.old  global_timers.cpp  global_timers.cpp.old  serial_interface_card.cpp
controller-software/core/controller/inc/: controller.h  fpga_instructions.h  fpga_interface.h  fpga_module_driver_factory.h  fpga_module_manager.h  register_helper.h
controller-software/core/controller/nodes/: base_node.h  node_core.h  node_factory.h  node_io.h  node_network.h
controller-software/core/controller/nodes/generic_nodes/: bool_constant.h  bool_print_cout.h  logic_and.h  logic_not.h  nothing_delay.h
controller-software/core/controller/nodes/generic_nodes/inc/: bool_constant.h  bool_print_cout.h  logic_and.h  logic_not.h  nothing_delay.h
controller-software/core/controller/nodes/global_variables/: base_global_variable.h
controller-software/core/controller/nodes/global_variables/inc/: base_global_variable.h
controller-software/core/controller/nodes/inc/: base_node.h  node_core.h  node_network.h
controller-software/core/controller/src/: controller.cpp  fpga_instructions.cpp  fpga_interface.cpp  fpga_module_manager.cpp  main.cpp  readme.md  register_helper.cpp
controller-software/core/devices/em_hvsd/: config.yaml
controller-software/core/nodes/: base_node.h  node_core.h  node_factory.h  node_network.h
controller-software/core/nodes/generic_nodes/: bool_constant.h  nothing_delay.h
controller-software/core/zynq_files/controller/config/fpga_configs/: controller_config.json
controller-software/em-os/: build_run_qemu.sh
controller-software/vitis/: .gitignore  create_project.tcl
controller-software/web/: api  api_helper.h  api_test.py  binding.gyp  controller_interface.cpp  main.js  openrpc-methods.js  package-lock.json  package.json  users.json
em-os/: .gitignore  build_pack_image.sh
(+180 files in other folders)
